--- a/themes/inhabitent-theme/sass/layout/_comments.scss
+++ b/themes/inhabitent-theme/sass/layout/_comments.scss
@@ -1,3 +1,5 @@
+/* Comments */
+
 .comments-title {
 	line-height: 1.25;
 	font-size: 2rem;
@@ -100,7 +102,7 @@ input[type=submit] {
       color:white;
     }
   }
-}
+} // input[type=submit]
 .logged-in-as a {
   color: $color__link;
   &:visited {
