--- a/themes/inhabitent-theme/sass/pages/_adventure-page.scss
+++ b/themes/inhabitent-theme/sass/pages/_adventure-page.scss
@@ -1,4 +1,4 @@
-// Single Adventure Page
+/* Single Adventure Page */
 
 .adventure-single {
   .adventure-header {
@@ -27,9 +27,10 @@
     margin-top: 0;
     margin-bottom: 50px;
   }
-}
+} // .adventure-single
 
-// Archive Adventure
+/* Archive Adventure */
+
 .adventure-grid {
   display: flex;
   flex-wrap: wrap;
@@ -63,4 +64,4 @@
       }
     }
   }
-}
+} // .adventure-grid-item
