--- a/themes/inhabitent-theme/sass/pages/_front-page.scss
+++ b/themes/inhabitent-theme/sass/pages/_front-page.scss
@@ -1,4 +1,3 @@
-
 /* Front page */
 
 .content-area-front {
@@ -8,7 +7,7 @@
     font-weight: normal;
     padding: 30px 0;
   }
-}
+} // .content-area-front
 .home .home-hero {
   background: linear-gradient(180deg,rgba(0,0,0,.4)  0,rgba(0,0,0,.4)), url(../../images/home-hero.jpg) no-repeat center;
   background-size: cover, cover;
@@ -21,7 +20,7 @@
   height: 275px;
 }
 
-// Shop Stuff
+/* Shop Stuff */
 
 .shop-stuff {
   display: flex;
@@ -43,7 +42,7 @@
   }
 }
 
-// Journal Post
+/* Journal Post */
 
 .journal-post {
   list-style: none;
@@ -86,9 +85,9 @@
       }
     }
   }
-}
+} // .journal-post
 
-// Latest Adventures
+/* Latest Adventures */
 
 .adventures {
   margin-bottom: 70px;
@@ -161,9 +160,10 @@
           line-height: 1;
         }
       }
-    }
-  }
-}
+    } // li
+  } // ul
+} // .adventures
+
 .story-wrap {
   position: relative;
   overflow: hidden;
@@ -202,7 +202,7 @@
       color:white;
     }
   }
-}
+} //.readtag
 
 .button {
   padding: 12.5px 25px;
@@ -221,4 +221,4 @@
       color:white;
     }
   }
-}
+} // .button
