--- a/themes/inhabitent-theme/sass/pages/_search-page.scss
+++ b/themes/inhabitent-theme/sass/pages/_search-page.scss
@@ -1,7 +1,10 @@
+/* Search Page */
+
 .search-whole-page {
   display: flex;
 }
-.search{
+
+.search {
   .page-title {
     font-size: 2.25rem;
     border-bottom: 1px solid #e1e1e1;
@@ -10,7 +13,7 @@
   .site-main{
     display: flex;
     flex-direction: column;
-    }
+  }
   a {
     &:visited {
       color: $color__link;
@@ -18,7 +21,7 @@
         color: $color__link-visited;
       }
     }
-  }
+  } // a
   ul {
     list-style: none;
     padding-left: 0;
@@ -28,7 +31,7 @@
     fieldset {
       border:0;
       }
-  }
+  } // .search-form
   .entry-title {
     position: relative;
     background: none;
@@ -40,7 +43,7 @@
     color: black;
     position: relative;
     padding: 0;
-  }
+  } // .entry-meta
   .readmore {
     margin-bottom: 30px;
   }
@@ -55,8 +58,8 @@
         color: white;
       }
     }
-  }
+  } // .moretag
   .page-content {
     padding-top: 10px;
   }
-}
+} // .search
