--- a/themes/inhabitent-theme/sass/pages/_shop-page.scss
+++ b/themes/inhabitent-theme/sass/pages/_shop-page.scss
@@ -1,4 +1,5 @@
-// Header of Shop Page
+/* Header of Shop Page */
+
 .product-links {
   list-style: none;
   display: flex;
@@ -17,9 +18,9 @@
       }
     }
   }
-}
+} // .product-links
 
-//Product Grid Area
+/* Product Grid Area */
 
 .product-area {
   width: 1120px;
@@ -50,7 +51,8 @@
         padding: 0 25px;
       }
   }
-}
+} // .product-header
+
 .product-grid {
   display: flex;
   flex-wrap: wrap;
@@ -75,7 +77,7 @@
       left: 50%;
       transform: translate(-50%,-52%);
     }
-  }
+  } // .product-image
   .product-info {
     display: flex;
     justify-content: center;
@@ -86,15 +88,16 @@
   .product-price {
     padding-left: 2px;
   }
-}
+} // .product-grid
 
-// Product Category Page
+/* Product Category Page */
 
 .product-tax-page {
   text-align: center;
 }
 
-// Single Product Page
+/* Single Product Page */
+
 .single-product-content {
   .type-product {
     display: flex;
@@ -117,4 +120,4 @@
   .moretag {
     margin-top: 0;
   }
-}
+} // .-single-product-content
