fixed the novocento font pathway

--- a/themes/inhabitent-theme/sass/layout/_navigation.scss
+++ b/themes/inhabitent-theme/sass/layout/_navigation.scss
@@ -29,7 +29,7 @@ a {
 .main-navigation {
 	display: flex;
 	justify-content: flex-end;
-	font-family: 'Novecento Sans Web',sans-serif;
+	font-family: $font__pre;
   text-transform: uppercase;
 	ul {
 		display: none;
