change the about page title to dynamically generate and add more CSS to error page

--- a/themes/inhabitent-theme/sass/pages/_error-page.scss
+++ b/themes/inhabitent-theme/sass/pages/_error-page.scss
@@ -3,10 +3,16 @@
 .error-whole-page {
   display: flex;
 }
-.error-404 .error-content{
-  display: flex;
-  flex-direction: column;
-  width: 73%;
+.error-404 {
+  .error-content{
+    display: flex;
+    flex-direction: column;
+    width: 800px;
+  }
+  .page-title {
+    font-size: 2.5rem;
+    width: 800px;
+  }
   a {
     &:visited {
       color: $color__link;
