--- a/themes/inhabitent-theme/style.css
+++ b/themes/inhabitent-theme/style.css
@@ -288,19 +288,19 @@ big {
 --------------------------------------------------------------*/
 @font-face {
   font-family: 'merriweather';
-  src: url("../../fonts/merriweather/merriweather-bold-webfont.woff2") format("woff2"), url("../../fonts/merriweather/merriweather-bold-webfont.woff") format("woff");
+  src: url("../../fonts/merriweather/merriweather-bold-webfont.woff2") format("woff2"), url("../../fonts/merriweather/merriweather-bold-webfont.svg") format("svg"), url("../../fonts/merriweather/merriweather-bold-webfont.ttf") format("ttf"), url("../../fonts/merriweather/merriweather-bold-webfont.eot") format("eot"), url("../../fonts/merriweather/merriweather-bold-webfont.woff") format("woff");
   font-weight: bold;
   font-style: normal; }
 
 @font-face {
   font-family: 'merriweather';
-  src: url("../../fonts/merriweather/merriweather-bolditalic-webfont.woff2") format("woff2"), url("../../fonts/merriweather/merriweather-bolditalic-webfont.woff") format("woff");
+  src: url("../../fonts/merriweather/merriweather-bolditalic-webfont.woff2") format("woff2"), url("../../fonts/merriweather/merriweather-bolditalic-webfont.svg") format("svg"), url("../../fonts/merriweather/merriweather-bolditalic-webfont.ttf") format("ttf"), url("../../fonts/merriweather/merriweather-bolditalic-webfont.eot") format("eot"), url("../../fonts/merriweather/merriweather-bolditalic-webfont.woff") format("woff");
   font-weight: bold;
   font-style: italic; }
 
 @font-face {
   font-family: 'merriweather';
-  src: url("../../fonts/merriweather/merriweather-light-webfont.woff2") format("woff2"), url("../../fonts/merriweather/merriweather-light-webfont.woff") format("woff");
+  src: url("../../fonts/merriweather/merriweather-light-webfont.woff2") format("woff2"), url("../../fonts/merriweather/merriweather-light-webfont.svg") format("svg"), url("../../fonts/merriweather/merriweather-light-webfont.ttf") format("ttf"), url("../../fonts/merriweather/merriweather-light-webfont.eot") format("eot"), url("../../fonts/merriweather/merriweather-light-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal; }
 
@@ -1510,15 +1510,21 @@ a {
   display: flex;
   -ms-flex-direction: column;
       flex-direction: column;
-  width: 73%; }
-  .error-404 .error-content a:visited {
-    color: #248a83; }
-    .error-404 .error-content a:visited:hover {
-      color: #2f1339; }
-  .error-404 .error-content ul {
-    list-style: none;
-    padding-left: 0;
-    margin-left: 0; }
+  width: 800px; }
+
+.error-404 .page-title {
+  font-size: 2.5rem;
+  width: 800px; }
+
+.error-404 a:visited {
+  color: #248a83; }
+  .error-404 a:visited:hover {
+    color: #2f1339; }
+
+.error-404 ul {
+  list-style: none;
+  padding-left: 0;
+  margin-left: 0; }
 
 .search-form fieldset {
   border: 0; }
